# mcp-lastfm

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/lastfm_mcp/: client.py  models.py  server.py
src/lastfm_mcp/tools/: __init__.py  album.py  artist.py  search.py  track.py  user.py
